<resources>
    <string name="app_name">Goabase</string>

    <string name="countries_title">Countries</string>
    <string name="countries_error_message">Error while getting countries list</string>

    <string name="party_details">Details</string>

    <string name="party_details_line_up">Line up</string>
    <string name="party_details_infos">Infos</string>
    <string name="party_details_unknown">Unknown </string>
    <string name="party_details_deco">Deco</string>
    <string name="party_details_fee">Entry fee</string>
    <string name="party_details_organizer">Organizer</string>
    <string name="party_details_location">Location</string>

    <string name="menu_about">About</string>

    <string name="about_text">The app is made with love to make it easier for everyone to access to Goabase party data.\n
    if you find many information missing in party details page it\'s just nobody has added it and it\'s not something we can change
    /n
    /n
    If you want to help building/improving the app feel free to contact us</string>


    <plurals name="numberOfParties">
        <item quantity="one">%d party</item>
        <item quantity="other">%d parties</item>
    </plurals>

</resources>
